# frosty-functions

./: .gitignore  Cargo.toml  README.md  TODO.md  canister_ids.json  dfx.json  generate-candid.sh  package-lock.json  package.json
contracts/: Bride.abi.json  Bridge.sol  HelloWorld.sol
script/: deploy-bridge.sh
src/assembly/: README.md  example.as  package-lock.json  package.json  runtime.as  runtime.ts  sources.ts  tsconfig.json
src/assembly-playground/: package.json
src/assembly-playground/assembly/: index.ts  runtime.ts  system.ts
src/assembly-playground/assembly/frosty/: index.ts  internal.ts
src/assembly-playground/assembly/frosty/internal/: async.ts
src/assembly/frosty/: crypto.as  env.as  evm.as  hex.as  index.as  internal.as  promise.as  random.as  signer.as  util.as
src/assembly/frosty/internal/: async.as
src/frosty-functions-backend/: Cargo.toml  delete-me---frosty-functions-backend.did  frosty-functions-backend.did
src/frosty-functions-backend/src/: api.rs  chain.rs  evm.rs  execution.rs  job.rs  lib.rs  repository.rs  signer.rs  simulation.rs  stable.rs  state.rs  storage.rs
src/frosty-functions-backend/src/crosschain/: README.md  mod.rs  signer.rs
src/frosty-functions-backend/src/runtime/: README.md  api.rs  env.rs  job.rs  mod.rs  runtime.rs
src/frosty-functions-backend/src/signer/: mod.rs  signer.rs  simulation.rs
src/frosty-functions-frontend/: package.json
src/frosty-functions-frontend/src/: App.js
src/frosty-ng/: README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
src/frosty-ng/src/: index.html  types.d.ts
src/frosty-ng/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts  frosty-function-service.spec.ts  frosty-function-service.ts  frosty-function.spec.ts  frosty-function.ts  signer.spec.ts  signer.ts  util.ts
src/frosty-ng/src/app/frosty-function-editor/: frosty-function-editor.html  frosty-function-editor.scss  frosty-function-editor.spec.ts  frosty-function-editor.ts
src/frosty-ng/src/app/function-overview/: function-overview.html  function-overview.scss  function-overview.ts
src/frosty-ng/src/app/invoke-function/: invoke-function.html  invoke-function.spec.ts  invoke-function.ts
src/frosty-ng/src/app/job/: job.html  job.scss  job.spec.ts  job.ts
src/frosty-ng/src/app/log-viewer/: log-viewer.html  log-viewer.scss  log-viewer.ts
src/frosty-ng/src/app/monaco-editor/: monaco-editor.html  monaco-editor.spec.ts  monaco-editor.ts
