[package]
name = "frosty-functions-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
alloy-sol-types = "1.4.1"
alloy-primitives = "1.4.1"
candid = "0.10"
evm_rpc_client = { version = "0.3.0", features = ["alloy"] }
evm_rpc_types = { version = "3.0.0", features = ["alloy"] }
hex = "0.4"
ic-canister-runtime = "0.1.0"
ic-cdk = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmi = { version = "0.51.2", default-features = false }
