[package]
name = "frosty-functions-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# Fork of https://github.com/ic-alloy/ic-alloy.git for latest ic-cdk
alloy = { git = "https://github.com/marceljuenemann/ic-alloy.git", default-features = false, features = [
  "contract",
  "icp",
  "sol-types"
]}
getrandom = { version = "0.2.15", features = ["custom"] }

anyhow = "1.0.86"
candid = "0.10"
# Only for Nat256, we use ic-alloy for RPCs  
evm_rpc_types = { version = "3.0" } # , features = ["alloy"] }
hex = "0.4"
ic-cdk = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmi = { version = "0.51.2", default-features = false }
